fix: sign in button text wrap
OKTA-350404

OKTA-350404
<<<Jenkins Check-In of Tested SHA: 3b754a701d20087956f35713bd69837b363373aa for eng_productivity_ci_bot_okta@okta.com>>>
Artifact: okta-signin-widget

--- a/assets/sass/v2/_identify.scss
+++ b/assets/sass/v2/_identify.scss
@@ -1,7 +1,7 @@
 .sign-in-with-device-option {
   .okta-verify-container {
     .okta-verify-authenticator {
-      margin-right: 0.83em;
+      margin: 0 0.83em 0 0;
     }
   }
 }
@@ -23,10 +23,17 @@
       margin-bottom: 0.83em;
     }
     .button {
-      display: block;
+      display: flex;
       position: relative;
-      height: 50px;
-      line-height: 50px;
+      min-height: 50px;
+      height: auto;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      line-height: 1.4;
+      align-items: center;
+      .okta-verify-authenticator {
+        flex-shrink: 0;
+      }
     }
   }
   .separation-line {
